# Django_elecronic_shop

./: .gitignore  README.md  catalog_data.json  data.json  parse_result.json  pyproject.toml
catalog/: admin.py  data_example.py  forms.py  invalid_words_form.py  models.py  services.py  tests.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_companies_product_company.py  0002_product_manufactured_at.py  0002_product_release_alter_product_discount.py  0003_remove_product_price_quantity_gte_0_and_more.py  0003_rename_county_companies_country.py  0004_alter_category_options_alter_companies_options_and_more.py  0004_companies_category.py  0005_alter_category_category_alter_companies_company.py  0005_remove_companies_category_companies_category.py  0006_companies_url_subcategory.py  0006_contact_contactform_alter_category_options_and_more.py  0007_alter_subcategory_options_alter_companies_url_and_more.py  0007_informationcontact.py  0008_contact_text_title_form.py  0008_remove_category_url_remove_companies_url_and_more.py  0009_category_url_companies_url_subcategory.py  0009_rename_contactform_formcontact.py  0010_alter_product_release.py  0011_product_name_button_product_url.py  0012_alter_product_url.py  0013_topfilters_filters.py  0014_alter_topfilters_options_alter_product_url.py  0015_alter_product_image_item.py  0016_category_image_companies_image.py  0017_alter_category_options.py  0018_osversions.py  0019_rename_product_osversions_product_version.py  0020_product_owner.py
catalog/parse/: pars_sity.py
catalog/templatetags/: card_tag.py  catalog_tag.py  include_tags.py  tags_filter.py
config/: config_parse.py  jinja2.py  settings.py  urls.py  utils.py  yandex.ini
home/: admin.py  context_processors.py  models.py  urls.py  views.py
home/migrations/: 0001_initial.py  0003_alter_navlist_url.py  (+16 more)
news/: admin.py  forms.py  models.py  urls.py  views.py
templates/: index.html
users/: admin.py  authentication.py  forms.py  mixins.py  models.py  urls.py  views.py
(+124 files in other folders)
