[tool.poetry]
name = "django-electronic-shop"
version = "0.1.0"
description = ""
authors = ["Alex Pavlov <yukiu217@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
jinja2 = "^3.1.3"
ui = "^0.1.4"
django-extensions = "^3.2.3"
psycopg2-binary = "^2.9.9"
pillow = "^10.3.0"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"
lorem-text = "^2.1"
httpx = "^0.27.0"
asyncio = "^3.4.3"
pytils = "^0.4.1"


[tool.poetry.group.dev.dependencies]
ipython = "^8.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
