[tool.poetry]
name = "django-electronic-shop"
version = "0.1.0"
description = ""
authors = ["Alex Pavlov <yukiu217@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
jinja2 = "^3.1.3"
ui = "^0.1.4"
django-extensions = "^3.2.3"
psycopg2-binary = "^2.9.9"
pillow = "^10.3.0"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"
lorem-text = "^2.1"
httpx = "^0.27.0"
asyncio = "^3.4.3"
pytils = "^0.4.1"
django-crispy-forms = "^2.1"
crispy-bootstrap5 = "^2024.2"
django-phonenumber-field = "^7.3.0"
phonenumbers = "^8.13.37"
django-countries = "^7.6.1"
babel = "^2.15.0"
urllib3 = "^2.2.1"


[tool.poetry.group.dev.dependencies]
ipython = "^8.23.0"
django-debug-toolbar = "^4.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
